# self-improving-robots

./: .gitignore  AGENTS.md  CLAUDE.md  COMMON_COMMANDS.md  README.md  REFACTORING_SUMMARY.md  SETUP_SPACEMOUSE.md  SLURM_QUICK_REFERENCE.md  SLURM_SETUP.md  SPACEMOUSE_TELEOP.md  WANDB_ARTIFACTS_GUIDE.md  pyproject.toml  pyrightconfig.json  requirements-spacemouse.txt  setup.py  setup_spacemouse.sh  spacemouse_teleop.py  test_maniskill_env.py  test_spacemouse.py
.claude/: notes.md  robosuite_cgl_fix.md  session2_summary.md
demos/PegInsertionSide-v1/spacemouse/: trajectory.h5  trajectory.json
docs/: data_collection_workflow.md
experiments/2025-10-23/: 1_1_square_act_demos.sh  1_2_square_act_correction.sh  2_1_square_dp_demos.sh  2_2_square_dp_correction.sh
experiments/2025-10-24/: 1_1_square_pi0_demos.sh  2_2_square_act_dagger_v2.sh  2_hg_dagger_v2.sh  3_pi0_lerobot_native_demos.sh  4_hg_dagger_v3.sh  5_square_act_dagger_v3.sh
scripts/: DEPLOYMENT_CHECKLIST.md  README.md  slurm_setup.sh  slurm_submit_training.sh  slurm_train_act.sh
sir/: __init__.py
sir/envs/: convert_usd_to_obj.py  franka_ik.py  furniture_assembly.xml  furniture_assembly_with_franka.xml  test_furniture_env.py  test_furniture_ik.py  test_ik_simple.py
sir/teleoperation/: ROBOSUITE_README.md  __init__.py  __main__.py  maniskill_teleop.py  robosuite_dagger.py  robosuite_spacemouse.py  robosuite_teleop.py  robot_config.py  spacemouse_teleop.py  utils.py
sir/tests/: __init__.py  test_robosuite_spacemouse.py
sir/tests/test_env/: __main__.py
sir/tests/test_spacemouse/: __main__.py
sir/tools/: lerobot_viewer.py  push_dataset.py
sir/training/: README.md  __init__.py  load_pretrained.py  train_act.py  train_policy.py  wandb_artifacts.py
