[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-improving-robots"
version = "0.1.0"
description = "Research on continual robot learning through RL fine-tuning and online adaptation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lars Ankile"}
]
keywords = ["robotics", "reinforcement-learning", "teleoperation", "continual-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gymnasium",
    "numpy",
    "mani-skill>=3.0.0b0",
    "pyspacemouse==1.1.4",
    "pynput",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/ankile/self-improving-robots"
Repository = "https://github.com/ankile/self-improving-robots"

[project.scripts]
sir-teleop = "sir.teleoperation.spacemouse_teleop:main"
sir-test-spacemouse = "sir.tests.test_spacemouse:main"
sir-test-env = "sir.tests.test_maniskill_env:main"

[tool.setuptools.packages.find]
include = ["sir*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
